<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Macaxeira</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tela_sanduiches">TelaSanduiches</string>
    <string name="title_activity_tela_produtos">Tela Produtos</string>
    <string name="title_activity_tela_produto">Tela Produto</string>
    <string name="mesa">MESA:</string>
    <string name="img1">Imagem1</string>
    <string name="img2">Imagem2</string>
    <string name="bt3">Imagem3</string>
    <string name="Mesa">"Mesa: "</string>
    <string name="Codigo">"Código: "</string>
    <string name="title_activity_splash">Splash</string>
    <string name="preco">Preço:</string>
    <string name="produto">Produto</string>
    <string name="addProduto">+</string>
    <string name="okProduto"> OK </string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_tela_pedido">TelaPedido</string>
    <string name="pedido">Pedido:</string>
    <string name="finalizar">Finalizar</string>
    <string name="enviar">Enviar</string>
    <string name="title_activity_http_activity_teste">HttpActivityTeste</string>
    <string name="title_activity_tela_cozinheiro">TelaCozinheiro</string>
    <string name="pedidos">"Pedidos: "</string>

</resources>
