<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TelaPedido" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="0.1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/preco1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/preco"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/numMesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/Mesa"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/numPedido"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:text="@string/pedido"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageButton
                android:id="@+id/addPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.05"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="adicionarMaisProdutos"
                android:src="@drawable/addflatpequeno"
                android:text="@string/addProduto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal" >

            <ListView
                android:id="@+id/listaPedido"
                android:layout_width="match_parent"
                android:layout_height="118dp" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/finalizar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_weight="0.05"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/lixoflat"
                android:text="@string/finalizar" />

            <ImageButton
                android:id="@+id/enviar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="0.05"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="enviar"
                android:src="@drawable/enviarflat"
                android:text="@string/enviar" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>